--- a/resorces/css/style.css
+++ b/resorces/css/style.css
@@ -1,9 +1,36 @@
 body {
   text-align: center;
+  font-family: Helvetica;
 }
-.header {
+h1 {
+  font-size: 70px;
+}
+h2 {
+  font-size: 32px;
+}
+h3 {
+  font-size: 23px;
+}
+.home p {
+  font-size: 18px;
+}
+p {
+  font-size: 14px;
+}
+#copy {
+  font-size: 11px;
+}
+a,
+.home,
+.footer,
+.about {
+  color: white;
+}
+.home,
+.about {
   background-image: url("../images/the-flatiron-building.png");
 }
 .footer {
   text-align: left;
+  background-color: dimgray;
 }
